--- a/index_dynamic_live.html
+++ b/index_dynamic_live.html
@@ -9,7 +9,7 @@
 
 <div style="display: block; position: relative; max-width: 640px;"><div style="padding-top: 56.25%;"><video 
 id="videojs-live-card-player" 
-data-video-id="5182322129001" 
+data-video-id="4877287056001" 
 data-account="3871979174001" 
 data-player="Byd3EZni" 
 data-embed="default" 
@@ -25,7 +25,7 @@ style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; rig
   <script src="//players.brightcove.net/3871979174001/Byd3EZni_default/index.min.js"></script>
   <script>
     (function(window, videojs) {
-      var player = window.player = videojs('videojs-live-card-player'),
+      var player = window.player = videojs("videojs-live-card-player"),
           options = {"imageUrl": "http://solutions.brightcove.com/lchok/rscs/imgs/bc-logo-large.png"};
 
       player.liveCard(options);
