Compatible with IE10 and IE11. Logs removed

--- a/index_dynamic_live.html
+++ b/index_dynamic_live.html
@@ -7,23 +7,22 @@
 </head>
 <body>
 
-<div style="display: block; position: relative; max-width: 640px;"><div style="padding-top: 56.25%;"><video 
-id="videojs-live-card-player" 
-data-video-id="4877287056001" 
-data-account="3871979174001" 
-data-player="Byd3EZni" 
-data-embed="default" 
-data-application-id 
-class="video-js" 
-controls 
-style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></video>
+<div style="display: block; position: relative; max-width: 640px;"><div style="padding-top: 56.25%;">
+
+<video
+  id="videojs-live-card-player" 
+  data-video-id="4877287056001"
+  data-account="3871979174001"
+  data-player="cce2bd64-877c-45a7-9abb-e8d6038876db"
+  data-embed="default"
+  data-application-id=""
+  class="video-js" controls
+  style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;"></video>
 </div></div>
   <script src="/node_modules/video.js/dist/video.js"></script>
   <script src="/dist/videojs-live-card.js"></script>
-  <!--<script src="//players.brightcove.net/4324533894001/HJWiMVXi_default/index.min.js"></script>-->
-    
-  <script src="//players.brightcove.net/3871979174001/Byd3EZni_default/index.min.js"></script>
-  <script>
+  <script src="//players.brightcove.net/3871979174001/cce2bd64-877c-45a7-9abb-e8d6038876db_default/index.min.js"></script>
+      <script>
     (function(window, videojs) {
       var player = window.player = videojs("videojs-live-card-player"),
           options = {"imageUrl": "http://solutions.brightcove.com/lchok/rscs/imgs/bc-logo-large.png"};
