Now possible to enter your own interval time between which the player will look for a valid stream. The options to pass is intervalTime and it must be a number in seconds only. If it is not a number, then the default value will be set to 15

--- a/index_dynamic_live.html
+++ b/index_dynamic_live.html
@@ -13,7 +13,7 @@
   id="videojs-live-card-player" 
   data-video-id="4877287056001"
   data-account="3871979174001"
-  data-player="cce2bd64-877c-45a7-9abb-e8d6038876db"
+  data-player="Byd3EZni"
   data-embed="default"
   data-application-id=""
   class="video-js" controls
@@ -21,11 +21,11 @@
 </div></div>
   <script src="/node_modules/video.js/dist/video.js"></script>
   <script src="/dist/videojs-live-card.js"></script>
-  <script src="//players.brightcove.net/3871979174001/cce2bd64-877c-45a7-9abb-e8d6038876db_default/index.min.js"></script>
+  <script src="//players.brightcove.net/3871979174001/Byd3EZni_default/index.min.js"></script>
       <script>
     (function(window, videojs) {
       var player = window.player = videojs("videojs-live-card-player"),
-          options = {"imageUrl": "http://solutions.brightcove.com/lchok/rscs/imgs/bc-logo-large.png"};
+          options = {"imageUrl": "http://solutions.brightcove.com/lchok/rscs/imgs/bc-logo-large.png", "intervalTime": 15};
 
       player.liveCard(options);
     }(window, window.videojs));
